# dpc_feedback_linearization

./: README.md  dpc.py  dynamics.py  eqx_utils.py  geometry.py  models.py  params.py  plotting.py  pyproject.toml
scripts/: action_grads_flpattpr.py  dpc_fl_nav.py  dpc_pm_cyl.py  run_dynamics.py  theta_grads_flpattpr.py
